    input was alternating.

  Bugs fixed:

  - separate_sets_here() (and therefore autfilt --separate-sets) could
    loop infinitely on some inputs.

  - In some situation, ltl2tgba -G could abort with
    "direct_simulation() requires separate Inf and Fin sets".  This
    was fixed by teaching simulation-based reductions how to deal
    with such cases.

New in spot 2.7.3 (2019-04-19)

  Bugs fixed:

  - When processing CSV files with MSDOS-style \r\n line endings,
    --stats would output the \r as part of the %> sequence instead
    of ignoring it.

  - Fix serious typo in removel_alternation() causing incorrect
    output for some VWAA.  Bug introduced in Spot 2.6.

  Documentation:

  - Multiple typos and minor updates.

New in spot 2.7.2 (2019-03-17)

  Python:

  - Improved support for explicit Kripke structures.  It is now
    possible to iterate over a kripke_graph object in a way similar to
    twa_graph.

  Documentation:

  - A new page shows how to create explicit Kripke structures in C++
    and Python.  See https://spot.lrde.epita.fr/tut52.html
  - Another new page shows how to deal with LTLf formulas (i.e., LTL
    with finite semantics) and how to translate those.
    See https://spot.lrde.epita.fr/tut12.html

  Build:

  - Work around a spurious null dereference warning when compiling
    with --coverage and g++ 8.3.0-3 from Debian unstable.

New in spot 2.7.1 (2019-02-14)

  Build:

  - Work around GCC bug #89303 that causes memory leaks and std::weak_bad_ptr
    exceptions when Spot is compiled with the version of g++ 8.2 currently
    distributed by Debian unstable (starting with g++ 8.2.0-15).

  Python:

  - The following methods of spot::bdd_dict are now usable in Python when
    fine control over the lifetime of associations between BDD variables
    and atomic propositions is needed.
    - register_proposition(formula, for_me)
    - register_anonymous_variables(count, for_me)
    - register_all_propositions_of(other, for_me)